# pyglicko2

./: README.md  pyproject.toml  test.py
src/pyglicko2/: __init__.py
