[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyglicko2"
version = "0.0.1a0"
requires-python = ">= 3.8"
authors = [
  {name = "Jingyang Wang", email = "wangjy2010@126.com"},
]
maintainers = [
  {name = "Jingyang Wang", email = "wangjy2010@126.com"},
]
description = "Python implementation of the Glicko-2 system"
readme = "README.md"
keywords = ["chess", "rating-system"]
classifiers = [
  "Development Status :: 3 - Alpha",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",

  "Operating System :: OS Independent",
]